--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,34 +16,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.1'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-
     //Payment Libraries
     implementation 'com.razorpay:checkout:1.4.8'
     implementation 'com.payumoney.sdkui:plug-n-play:1.1.0'
-
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-
     implementation 'com.android.volley:volley:1.1.0'
-
     implementation 'com.github.clans:fab:1.6.4'
-
     implementation 'com.thefinestartist:finestwebview:1.2.7'
-
     implementation 'com.kbeanie:image-chooser-library:1.5.1@aar'
-
     // Image caching libraries
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
